--- a/style.css
+++ b/style.css
@@ -103,4 +103,41 @@ top: -50px;
     height: 55px;
     max-width: 760px;
     border-radius: 10px;
+    display: flex;
+    align-items: center;
+    padding: 7px;
+color: black;
+}
+.location-map
+{
+     color:rgb(230, 139, 139);
+    font-size: 22px;
+}
+.caret-up
+{
+    color:black;
+}
+.detectionlocation input{
+    border: none;
+    font-size: 15px;
+    width: 190px;
+    outline: none;
+
+}
+.search-item
+{
+    color: rgb(103, 98, 98);
+    font-size: 18px;
+}
+.line{
+    padding: 7px;
+}
+.search-item input
+{
+    max-width: 100%;
+    width: 400px;
+    font-size: 15px;
+    border:none;
+    padding: 5px 10px;
+    outline: none;
 }
