--- a/style.css
+++ b/style.css
@@ -1,46 +1,21 @@
-*
-{
-    box-sizing: border-box;
-}
 body{
-    margin:0;
-    width:100%;
-}
-.container{
-    width: 83%;
-    margin: auto;
-}
-.header
-{
-    position:relative;
-    height: 420px;
-}
-.image-container
-{
-    position: relative;
-    width: 100%;
-    height: 420px;
+    background-image: url(https://t4.ftcdn.net/jpg/02/84/46/89/360_F_284468940_1bg6BwgOfjCnE3W0wkMVMVqddJgtMynE.jpg);
+	background-size:cover;
     overflow: hidden;
-}
-.image-container img
-{
-width: 100%;
-height: 100%;
-object-fit: cover;
-transform: scale(1.1);
 }
 .header-body-section
 {
     position:absolute;
     top: 0;
     width: 100%;
-    color: white;
+    color: black;
 }
 .nav
 {
     
     font-weight: 550;
     height: 50px;
+    background-color:white;
 }
 .container-nav
 {
@@ -74,176 +49,53 @@ display: flex;
     color: inherit;
     text-decoration: none;
 }
-.zomato-logo
+.body-section
 {
-    width: 300px;
-}
-.container-header-body
-{
+   
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 420px;
-    flex-direction: column;
+   
 }
-.header-body-content
-{
-position: relative;
-top: -50px;
-}
-.header-body-section-discover
-{
-    font-size: 40px;
-    margin: 25px 0px;
-}
-.search-container
-{
-    background-color: white;
-    width: 100%;
-    height: 55px;
-    max-width: 760px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    padding: 7px;
-color: black;
-}
-.location-map
-{
-     color:rgb(230, 139, 139);
-    font-size: 22px;
-}
-.caret-up
-{
-    color:black;
-}
-.detectionlocation input{
-    border: none;
-    font-size: 15px;
-    width: 190px;
-    outline: none;
-
-}
-.search-item
-{
-    color: rgb(103, 98, 98);
-    font-size: 18px;
-}
-.line{
-    padding: 7px;
-}
-.search-item input
-{
-    max-width: 100%;
-    width: 400px;
-    font-size: 15px;
-    border:none;
-    padding: 5px 10px;
-    outline: none;
-}
-/**section1 feature***/
-.section-1
-{
-    margin-top: 40px;
-    margin-bottom: 40px;
-}
-.container-feature
-{
-    display: flex;
-    justify-content: space-between;
-}
-.features
-{
-    overflow: hidden;
-    border-radius: 20px;
-    border: 0.1px solid rgb(214, 213, 213);
-}
-.feature-image
-{
-    width: 360px;
-    height: 200px;
-    overflow: hidden;
-}
-.feature-image img
-{
-width: 100%;
-background-position:100px;
-}
-.features h3,
-.features p{
-    padding-left: 20px;
-}
-.features:hover
-{
-    transition: transform 0.7s;
-    transform: scale(1.04);
-    cursor:pointer;
-}
-section{
-    /*padding:50px 0;*/
-}
-/***section 2***/
-.section-2-left h1{
-    font-size: 40px;
-    margin-bottom: 0;
-}
-.section-2-left p{
-    font-size: 20px;
-    margin-top: 0;
-    letter-spacing: 1px;
-    font-weight: 200;
-}
-.section-2-top{
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.section-2-right
-{
-    align-self: flex-end;
-    color:rgb(228,56,56)
-}
-.section-2-item
-{
-    max-width: 267px;
-    box-shadow: 2px 2px 5px black;
-    border-radius: 5px;
-    height: 320px;
-    overflow: hidden;
-    position: relative;
-    margin-left: 4em;
-}
-.section-2-item:first-child
-{
-    margin:0;
-}
-.section-2-item img{
-    width: 100%;
-    height: 100%;
-    box-shadow:inset -50px -50px 50px rgba(0,0,0,0.1);
-}
-.section-2-image-describition
-{
-    padding: 0px 10px;
-    position: absolute;
-    z-index: 2;
-    bottom: 0;
-    /*background: rgba(0,0,0,0.1);*/
-    width: 100%;
+div.x{
+    
+    text-align:center;
     color:white;
-    text-shadow: 2px 2px 5px rgba(0,0,0,0.1);
-    box-shadow:inset -50px -50px 50px rgba(0,0,0,0.1) ;
-}
-.section-2-image-describition p{
-    margin: 0;
-    font-size: 19px;
-}
-.section-2-image-describition p:nth :nth-child(2)
-{
-    font-size: 18px;
-}
-.section-2-body
-{
-    display: flex;
+    width: 300px;
+    height:250px;
+    font-size: 40px;
+    transform: translate(100px,100px);
+    
+    }
+div.x1{
+    
+        text-align:center;
+        color:white;
+        width: 300px;
+        height:250px;
+        font-size: 40px;
+        transform: translate(300px,100px);
+        
+        }
+div.x2{
+    
+            text-align:center;
+            color:white;
+            width: 300px;
+            height:250px;
+            font-size: 40px;
+            transform: translate(470px,100px);
+            
+            }
 
+div.y button
+{
+    background-color: yellow;
 }
+div.y a
+{
+    color: black;
+    font-size: 30px;
+text-decoration: none;
+}
+
+
+  
