--- a/style5.css
+++ b/style5.css
@@ -6,6 +6,12 @@
     float: left;
     width: 33.33%;
     padding: 5px;
+    
+  }
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    justify-content: space-between;
   }
   .row::after {
     content: "";
@@ -14,6 +20,8 @@
   }
   .row {
     display: flex;
+    justify-content: space-between;
+   
   }
   
   .column {
