--- a/style5.css
+++ b/style5.css
@@ -3,24 +3,22 @@
   }
   
   .column {
-    float: left;
+    
     width: 33.33%;
     padding: 5px;
+    width: 360px;
+    height: 200px;
+    overflow: hidden;
     
   }
   .column img {
     margin-top: 8px;
-    vertical-align: middle;
-    justify-content: space-between;
+    width: 100%;
   }
  
-  .row {
-    display: flex;
-  }
  .section
 {
     margin-top: 40px;
-    margin-bottom: 40px;
     
 }
 
@@ -28,25 +26,16 @@
 {
     display: flex;
     justify-content: space-between;
+    padding-bottom: 20px;
+    
 }
  /* Clearfix (clear floats) */
  
 .feature
 {
     overflow: hidden;
-    border-radius: 20px;
+    border-radius: 30px;
     border: 0.1px solid rgb(214, 213, 213);
-}
-.column
-{
-    width: 360px;
-    height: 200px;
-    overflow: hidden;
-}
-.column img
-{
-width: 100%;
-background-position:100px;
 }
 .feature h3{
     padding-left: 20px;
