--- a/style4.css
+++ b/style4.css
@@ -1,6 +1,10 @@
+*{
+    box-sizing: border-box;
+}
 .section-2-left h1{
     font-size: 40px;
     margin-bottom: 0;
+    color: rgb(0, 0, 0);
 }
 .section-2-left p{
     font-size: 20px;
@@ -9,8 +13,7 @@
     font-weight: 200;
 }
 .section-2-top{
-    display:flex;
-    align-items: center;
+   display: flex;
     justify-content: space-between;
 }
 .section-2-right
