--- a/style3.css
+++ b/style3.css
@@ -1,65 +1,111 @@
-.section-1-body
-{
-    display: flex;
-
-}
-.section-1-left h1{
-    font-size: 40px;
-    margin-bottom: 10px;
-}
-.section-1-left p{
-    font-size: 20px;
-    margin-top: 0;
-    letter-spacing: 1px;
-    font-weight: 200;
-}
-.section-1-top{
-    display:flex;
-    align-items: center;
-    justify-content:space-between;
-}
-.section-1-right
-{
-    align-self: flex-end;
-    color:rgb(228,56,56)
-}
-.section-1-item
-{
-    max-width: 250px;
-    box-shadow: 2px 2px 5px black;
-    border-radius: 5px;
-    height: 320px;
-    overflow: hidden;
-    position: relative;
-    margin-left: 4em;
-}
-.section-1-item:first-child
+*
 {
     margin:0;
+    padding: 0;
+    box-sizing: none;
+    text-decoration: none;
+    list-style: none;
+}
+html {
+    font-family: 'open sans' , sans-serif;
+    scroll-behavior: smooth;
+}
+img{
+    width: 100%;
+}
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px;
+    width: 100%;
+    height: 70px;
+    position: absolute;
+    z-index: 1;
+}
+header .logo a{
+    font-size: 30px;
+    color: white;
+    padding: 15px 30px;
+}
+header .logo a span {
+    color:orange;
+}
+header nav ul{
+    display: flex;
+}
+header nav ul li a{
+    margin: 5px 20px;
+    font-size: 18px;
+    color: white;
+    padding: 10px 10px;
+}
+header nav ul li a:hover{
+    border-bottom:2px solid white;
+}
+/* content */
+.content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    position: relative;
+    min-height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(to bottom right,rgba(96,76,76,.6), rgba(96,76,76,.6)),url("https://www.cbc.ca/stevenandchris/content/images/_full/light-desserts-lead-image-all.jpg");
+background-position: center bottom;
+background-repeat: no-repeat;
+background-size: cover;
+background-attachment: fixed;
+}
+.content h2{
+    font-size: 32px;
+    padding: 5px;
+    color: white;
+}
+.content p{
+    font-size: 22px;
+    color:white;
 }
 
-.section-1-item img{
+/*menu*/
+.menu{
+    background-color: #333333;
     width: 100%;
-    height: 100%;
-    box-shadow:inset -50px -50px 50px rgba(0,0,0,0.1);
 }
-.section-1-image-describition
-{
-    padding: 0px 10px;
-    position: absolute;
-    z-index: 2;
-    bottom: 0;
-    /*background: rgba(0,0,0,0.1);*/
-    width: 100%;
-    color:white;
-    text-shadow: 2px 2px 5px rgba(0,0,0,0.1);
-    box-shadow:inset -50px -50px 50px rgba(0,0,0,0.1) ;
+.menu menu-header{
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    justify-content: space-between;
 }
-.section-1-image-describition p{
-    margin: 0;
-    font-size: 19px;
+.menu-header h3{
+    color: orange;
+    padding: 10px 30px;
 }
-.section-1-image-describition p:nth :nth-child(2)
-{
-    font-size: 18px;
+.menu-header h4{
+    color:orange;
+    padding: 10px 20px;
+}
+.menu .menu-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 50px 0;
+    flex-wrap: wrap;
+    background-color: #404040;
+}
+.menu .menu-content .hot-coffees {
+    width: 250px;
+}
+.menu .menu-content .hot-coffees .hot-coffees-image img{
+    border-radius: 50%;
+}
+.menu .menu-content .hot-coffees-body{
+    text-align: center;
+    margin-top: 10px;
+}
+.menu .menu-content .hot-coffees-body h2{
+    color:orange;
 }
