--- a/orderstyle.css
+++ b/orderstyle.css
@@ -12,8 +12,8 @@ body{
 .heading{
     
     background-color: black;
-    color: lightslategray;
-    width: 100%;
+    color: #778899;
+    width: 75%;
     text-align: center;
     padding: 15px 60px 15px 60px;
     top: 0;
@@ -23,14 +23,14 @@ body{
     height: 100%;
     width: 100%;
     padding-right: 360px;
-    padding-left: 60px;
+    padding-left: 10px;
 }
 .dashboard-image{
     width: 100%;
     height: 360px;
     position: relative;
-    margin-top: 4rem;
-    padding: 1rem;
+    margin-top: 40px;
+    padding: 10px;
     border-radius: 30px;
     cursor: pointer;
 }
@@ -45,7 +45,6 @@ body{
     color: lightgrey;
     top: 25%;
     left: 10%;
-    front-weight:800;
 }
 .banner-promo h1 span{
     color: rgb(227, 227, 95);
@@ -54,12 +53,12 @@ body{
     color: white;
 }
 .dashboard-title{
-    padding: 0 1rem;
+    padding: 20px;
 }
 .dashboard-menu{
     display: flex;
     gap: 10px;
-    padding: 0.3rem 1rem;
+    padding: 3px 15px;
     overflow-x: auto;
 }
 .dashboard-menu a{
@@ -67,7 +66,7 @@ body{
     text-align: center;
     border-radius: 20px;
     min-width: 120px;
-    padding: 0.5rem 0;
+    padding: 5px ;
     font-size: 0.9rem;
     color: black;
     background-color: lightgray;
@@ -80,7 +79,7 @@ body{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 15px;
-    padding: 0.5em 1rem 1rem 1rem;
+    padding: 10px 10px 10px 10px;
 }
 .dashboard-card{
     background-color: lightcyan;
