--- a/style4.css
+++ b/style4.css
@@ -65,7 +65,7 @@ header nav ul li a:hover {
     position: relative;
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("./image/img.jpg");
+    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("./assets/img.jpg");
     background-position: center bottom;
     background-repeat: no-repeat;
     background-size: cover;
