--- a/orderstyle.css
+++ b/orderstyle.css
@@ -13,10 +13,11 @@ body{
     
     background-color: black;
     color: #778899;
-    width: 75%;
+    width: 100%;
     text-align: center;
     padding: 15px 60px 15px 60px;
     top: 0;
+   
     
 }
 .dashboard{
@@ -122,6 +123,7 @@ body{
 }
 .dashboard-order h3{
     padding: 10px 0;
+    c
 }
 .order-address h4{
     line-height: 2;
@@ -162,7 +164,7 @@ body{
     object-fit: cover;
     border-radius: 15px;
 }
-.order-detail input{
+.order-details input{
     width: 35px;
     height: 35px;
     text-align: center;
@@ -180,5 +182,45 @@ body{
 }
 .order-total span{
     float: right;
+    font-weight: 600;
+}
+.order-promo{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: lightgrey;
+    border: 2px;
+    border-radius: 10px;
+    height: 45px;
+    padding: 0 5px;
+    margin: 5px 0 10px 0;
+
+}
+.input-promo{
+    height: 100%;
+    background: transparent;
+    border: none;
+}
+.button-promo{
+    float: right;
+    background-color: yellow;
+    border: none;
+    border-radius: 5px;
+    height: 80%;
+    width: 100%;
+    cursor: pointer;
+}
+.checkout{
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    background-color: red;
+    border: none;
+    border-radius: 20px;
+    color: lightgrey;
+    cursor: pointer;
+}
+.checkout:hover{
+    text-transform: uppercase;
     font-weight: 600;
 }
